<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/img_detail_page"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/imageHero"
        tools:src="@tools:sample/avatars" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="235dp"
        android:backgroundTint="@android:color/white"
        app:cardCornerRadius="10dp" />

    <TextView
        android:id="@+id/tv_name_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="240dp"
        android:layout_marginEnd="16dp"
        android:elevation="3dp"
        android:fontFamily="@font/crimson_text_bold"
        android:text="@string/heroes_name"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_time_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="270dp"
        android:layout_marginEnd="16dp"
        android:elevation="3dp"
        android:fontFamily="@font/lato_reguler"
        android:text="@string/time"
        android:textColor="@color/black"
        android:textSize="12sp" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="245dp"
        android:layout_marginBottom="45dp"
        android:background="@android:color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/desc_detail_page"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="60dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="17dp"
                android:lineSpacingMultiplier="1.5"
                android:text="@string/detail"
                android:textColor="@android:color/black" />

        </LinearLayout>

    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@android:color/white"
        android:padding="5dp">

        <androidx.cardview.widget.CardView
            android:layout_width="250dp"
            android:layout_height="35dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            app:cardCornerRadius="10dp">

            <Button
                android:id="@+id/shareInfo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@color/purple_500"
                android:text="@string/share"
                android:textAllCaps="false"
                android:textColor="@android:color/white" />

        </androidx.cardview.widget.CardView>

    </RelativeLayout>


</RelativeLayout>