<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/rounded">

        <TextView
            android:id="@+id/pilih_provinsi"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:fontFamily="@font/lato_bold"
            android:gravity="center"
            android:text="@string/my_profile"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="260dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    app:cardCornerRadius="15dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/background_image_profile"
                        android:scaleType="centerCrop"
                        android:src="@drawable/background_profile" />
                </androidx.cardview.widget.CardView>

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="110dp"
                    android:layout_height="110dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="146dp"
                    android:elevation="2dp"
                    android:src="@android:color/white" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="150dp"
                    android:elevation="2dp"
                    android:src="@color/colorPrimary" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="92dp"
                    android:layout_height="92dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="154dp"
                    android:elevation="2dp"
                    android:src="@android:color/white" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="85dp"
                    android:layout_height="85dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="157dp"
                    android:elevation="2dp"
                    android:src="@drawable/my_image" />

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/crimson_text_reguler"
                android:text="@string/myName"
                android:textColor="@android:color/black"
                android:textSize="27sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="3dp"
                android:fontFamily="@font/lato_reguler"
                android:text="@string/role"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="40dp"
                android:lineSpacingExtra="4dp"
                android:text="@string/my_profile_desc"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="17dp"
                android:gravity="left"
                android:orientation="vertical"
                tools:ignore="RtlHardcoded">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:orientation="horizontal">

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="10dp">

                            <ImageView
                                android:id="@+id/btn_email_b"
                                android:layout_width="25dp"
                                android:layout_height="25dp"
                                android:layout_centerInParent="true"
                                android:contentDescription="@string/email_icon"
                                android:src="@drawable/ic_gmail" />

                        </RelativeLayout>

                        <TextView
                            android:id="@+id/email_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:fontFamily="@font/lato_reguler"
                            android:text="@string/myEmail"
                            android:textColor="@color/black"
                            android:textSize="15sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:orientation="horizontal">

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="10dp">

                            <ImageView
                                android:id="@+id/btn_ig_b"
                                android:layout_width="23dp"
                                android:layout_height="23dp"
                                android:layout_centerInParent="true"
                                android:layout_marginLeft="3dp"
                                android:contentDescription="@string/instagram_icon"
                                android:src="@drawable/ig_icon" />
                        </RelativeLayout>

                        <TextView
                            android:id="@+id/ig_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:fontFamily="@font/lato_reguler"
                            android:text="@string/miqdad_aja7"
                            android:textColor="@color/black"
                            android:textSize="15sp" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:layout_marginBottom="10dp"
                        android:orientation="horizontal">

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="10dp">

                            <ImageView
                                android:id="@+id/btn_github_b"
                                android:layout_width="23dp"
                                android:layout_height="23dp"
                                android:layout_centerInParent="true"
                                android:layout_marginLeft="3dp"
                                android:contentDescription="@string/github_icon"
                                android:src="@drawable/github_icon" />
                        </RelativeLayout>

                        <TextView
                            android:id="@+id/github_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:fontFamily="@font/lato_reguler"
                            android:text="@string/https_github_com_miqdad71"
                            android:textColor="@color/black"
                            android:textSize="15sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="10dp">

                            <ImageView
                                android:id="@+id/btn_whatsapp_b"
                                android:layout_width="23dp"
                                android:layout_height="23dp"
                                android:layout_centerInParent="true"
                                android:layout_marginLeft="3dp"
                                android:contentDescription="@string/whatsapp_icon"
                                android:src="@drawable/wa_icon" />
                        </RelativeLayout>

                        <TextView
                            android:id="@+id/wa_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:fontFamily="@font/lato_reguler"
                            android:text="@string/_0812_9805_6468"
                            android:textColor="@color/black"
                            android:textSize="15sp" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="100dp"
                android:text="@string/click_on_icon_or_text_to_directing_into_account"
                android:textColor="@android:color/darker_gray"
                android:textSize="12sp"
                android:textStyle="italic" />

        </LinearLayout>
    </ScrollView>

    <com.ismaeldivita.chipnavigation.ChipNavigationBar
        android:id="@+id/bottom_nav_test"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp"
        android:background="@drawable/rounded_bottom"
        android:gravity="start"
        app:cnb_menuResource="@menu/bottom_nav"
        app:cnb_unselectedColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent" />

</RelativeLayout>